--- a/build.gradle
+++ b/build.gradle
@@ -26,11 +26,18 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+	// implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.529'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
+
+	implementation 'com.fasterxml.jackson.core:jackson-databind'
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
